# QT6ProjectCollection

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  QTProjectCollectionData.json  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
AESCryptography/: aescryptography.cpp  aescryptography.h  aescryptography.ui
MiniProjects/NumberTracker/: mpnumbertracker.cpp  mpnumbertracker.h  mpnumbertracker.ui
